static/css/all.css
@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap");
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

body {
  line-height: 1;
}

ol,
ul {
  list-style: none;
}

blockquote,
q {
  quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

:root {
  /* Primary */
  --primary-cyan-70: #448899;
  --primary-cyan-50: #66aabb;
  --primary-cyan-20: #aaddee;
  /* Secondary */
  --secondary-gray-70: #666666;
  --secondary-gray-50: #757575;
  --secondary-gray-20: #e8e8e8;
  --secondary-gray-10: #eeeeee;
  /* Additional */
  --white: #ffffff;
  --black: #000000;
  --gray-500: #cccccc;
  /* Gradients */
  --gradient-light-cyan: linear-gradient(to left, #337788, #66aabb);
  --gradient-dark-cyan: linear-gradient(0deg, #337788, #66aabb);
}

body {
  font-family: "Noto Sans TC";
  line-height: 1.5;
}

.container {
  max-width: 1200px;
  margin: 0 auto;
}
@media (min-width: 361px) and (max-width: 600px) {
  .container {
    padding: 10px;
  }
}

img {
  max-width: 100%;
  vertical-align: middle;
  height: auto;
  object-fit: cover;
}

a {
  display: inline-block;
  color: inherit;
  text-decoration: none;
}
a:hover {
  opacity: 0.8;
}

.text-h1 {
  font-family: "Noto Sans TC", sans-serif;
  font-size: 28px;
  line-height: 24px;
  font-weight: 700;
}

.text-h2 {
  font-family: "Noto Sans TC", sans-serif;
  font-size: 30px;
  line-height: 34px;
  font-weight: 700;
}

.text-h3-bold {
  font-family: "Noto Sans TC", sans-serif;
  font-size: 24px;
  line-height: 24px;
  font-weight: 700;
}

.text-h3-regular {
  font-family: "Noto Sans TC", sans-serif;
  font-size: 24px;
  line-height: 24px;
  font-weight: 400;
}

.text-h4-bold {
  font-family: "Noto Sans TC", sans-serif;
  font-size: 19px;
  line-height: 16px;
  font-weight: 700;
}

.text-btn-bold {
  font-family: "Noto Sans TC", sans-serif;
  font-size: 19px;
  line-height: 16px;
  font-weight: 700;
}

.text-btn-regular {
  font-family: "Noto Sans TC", sans-serif;
  font-size: 19px;
  line-height: 16px;
  font-weight: 400;
}

.text-content-bold {
  font-family: "Noto Sans TC", sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 700;
}

.text-content-regular {
  font-family: "Noto Sans TC", sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.text-body-bold {
  font-family: "Noto Sans TC", sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 700;
}

.text-body-medium {
  font-family: "Noto Sans TC", sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
}

.text-body-regular {
  font-family: "Noto Sans TC", sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.text-list {
  font-family: "Noto Sans TC", sans-serif;
  font-size: 14px;
  line-height: 1;
  font-weight: 500;
}

header {
  padding: 10px;
}
header .header__title {
  color: #448899;
}

.gallery {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
  gap: 30px;
  padding: 15px;
}

footer {
  padding: 45px 0;
  background-color: #757575;
}
footer .footer__content {
  color: #ffffff;
}

.btn {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  border-radius: 5px;
  border: none;
  cursor: pointer;
  opacity: 1;
  background-color: transparent;
}
.btn--primary {
  background-color: #448899;
  color: #ffffff;
  padding: 10px 20px;
  font-size: 19px;
}
.btn--primary:hover {
  background-color: #66aabb;
}
.btn--dialog {
  padding: 10px 20px;
}
.btn--dialog:hover {
  background-color: #66aabb;
}
.btn--booking {
  min-width: 117px;
  height: 36px;
}
.btn--nav {
  padding: 10px;
  height: auto;
  min-width: auto;
  background: none;
  color: #666666;
  font-family: "Noto Sans TC", sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
}
.btn--nav:hover {
  color: #000000;
}
.btn:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.card {
  background: #ffffff;
  border-radius: 5px;
  overflow: hidden;
  cursor: pointer;
  transition: transform 0.2 ease, box-shadow 0.2 ease;
}
.card:hover {
  opacity: 0.8;
  transition: transform 0.5 ease;
}
.card__cover {
  position: relative;
  width: 100%;
  overflow: hidden;
  aspect-ratio: 330/235;
}
@media (min-width: 901px) and (max-width: 1920px) {
  .card__cover {
    align-items: 270/197;
  }
}
.card__image {
  width: 100%;
  height: 100%;
  object-fit: cover;
  display: block;
  filter: contrast(70%);
  transition: filter 0.5s cubic-bezier(0.43, 0.41, 0.22, 0.91);
}
.card__image:hover {
  filter: contrast(100%);
}
.card__title {
  position: absolute;
  bottom: 0;
  left: 50%;
  z-index: 10;
  transform: translateX(-50%);
  width: 100%;
  padding: 10px;
  background: #000000;
  opacity: 0.6;
  color: #ffffff;
}
.card__details {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
  color: #757575;
  border: 1px solid #e8e8e8;
  border-radius: 5px;
}

.modal {
  position: relative;
  width: 340px;
  border: none;
  border-radius: 5px;
  color: #666666;
  margin: 80px auto;
}
/* ... */

